# bench.audio

./: .env.example  .eslintrc.cjs  .gitignore  Dockerfile.deepnote  README.md  components.json  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  start-database.sh  tailwind.config.ts
data/src/data/: __init__.py  download_data.ts  notebook.ipynb  upsert_elo.ts
prisma/: schema.prisma
prisma/migrations/20240514020812_base_db/: migration.sql
prisma/migrations/20240514021218_add_prompt_key_to_db/: migration.sql
prisma/migrations/20240515005341_add_hume/: migration.sql
prisma/migrations/20240520005008_match_battle_states_in_db_with_state_machine/: migration.sql
src/: env.js
src/components/: Loading.tsx  banner.tsx  logos.tsx
src/components/ui/: button.tsx  combobox.tsx  command.tsx  dialog.tsx  drawer.tsx  input.tsx  popover.tsx  scroll-area.tsx  select.tsx  table.tsx  textarea.tsx
src/lib/: state.ts  stateMachine.ts  types.ts
src/pages/: _app.tsx  index.tsx  leaderboard.tsx
src/pages/api/battle/: new.ts
src/pages/battles/: [id].tsx  new.tsx
src/prompts/: promptSchema.ts
src/prompts/prompts/: friend.ts  immigrationOfficer.ts  sportsCoach.ts  strike.ts  therapist.ts
src/providers/: readme.md
src/providers/config/: config.json  fetchConfig.ts  generateConfig.ts  generateHumeConfig.ts
src/providers/lib/: commonClient.tsx  commonServer.ts  providerSchema.ts  providerTypes.ts
src/scripts/: generateConfig.ts  generateHumeConfig.ts  pushMigration.ts
src/server/api/: root.ts  trpc.ts
src/utils/: api.ts
(+16 files in other folders)
