[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rahul Tarak", email = "cryogenicplanet@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.0.3",
    "plotly>=5.24.1",
    "tqdm>=4.66.5",
    "nbformat>=5.10.4",
    "scikit-learn>=1.3.2",
    "kaleido>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["data/src/data"]

